--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -25,7 +25,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h5rdmtoolbox.conventions\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx"
    ]
@@ -123,7 +131,19 @@
    "execution_count": 4,
    "id": "0a36a447-4120-4bd2-a598-7ca4b4f8114d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'contact'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m my_convention \u001b[38;5;241m=\u001b[39m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mConvention\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmy_convention\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m my_convention\u001b[38;5;241m.\u001b[39madd(comment)\n\u001b[0;32m      3\u001b[0m my_convention\u001b[38;5;241m.\u001b[39madd(contact)\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'contact'"
+     ]
+    }
+   ],
    "source": [
     "my_convention = h5tbx.conventions.Convention('my_convention')\n",
     "my_convention.add(comment)\n",
@@ -146,49 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a12b266e-dda6-46f4-a659-bd5aef46c312",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Parameters for \"__init__\":\n",
-      "  - name\n",
-      "  - mode\n",
-      "  - layout\n",
-      "  - attrs\n",
-      "  - \u001b[1mcomment\u001b[0m\n",
-      "  - \u001b[1mcontact\u001b[0m\n",
-      "  - kwargs\n",
-      "\n",
-      "Parameters for \"create_group\":\n",
-      "  - name\n",
-      "  - overwrite\n",
-      "  - attrs\n",
-      "  - update_attrs\n",
-      "  - track_order\n",
-      "  - kwargs\n",
-      "\n",
-      "Parameters for \"create_dataset\":\n",
-      "  - name\n",
-      "  - shape\n",
-      "  - dtype\n",
-      "  - data\n",
-      "  - offset\n",
-      "  - scale\n",
-      "  - overwrite\n",
-      "  - chunks\n",
-      "  - make_scale\n",
-      "  - attach_scales\n",
-      "  - ancillary_datasets\n",
-      "  - attrs\n",
-      "  - kwargs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import inspect\n",
     "\n",
@@ -214,18 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6cb0378a-3929-4c86-b1b9-ce20bcd3b29c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The standard attribute \"contact\" is required but not provided.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with h5tbx.File(comment='123') as h5:\n",
@@ -236,18 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "327bed5d-2dd4-4523-a6f7-7de52bc1aed9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The attribute \"comment\" is standardized. It seems, that the input \"123\" is not valid. Here is the description of the standard attribute, which may help to find the issue: \"Additional information about the file\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with h5tbx.File(contact='https://orcid.org/0000-0001-8729-0482',\n",
@@ -267,238 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "703629c4-1f49-48ff-b067-d40881995a62",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<head><style>/*\r\n",
-       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
-       "*/\r\n",
-       ".h5tb-header > div,\r\n",
-       ".h5tb-header > ul {\r\n",
-       "    display: inline;\r\n",
-       "    margin-top: 0;\r\n",
-       "    margin-bottom: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-cls,\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    margin-left: 2px;\r\n",
-       "    margin-right: 10px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 3px;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections label {\r\n",
-       "    display: inline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label > span {\r\n",
-       "    display: inline;\r\n",
-       "    margin-left: 4px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label > span {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:enabled + label {\r\n",
-       "    cursor: pointer;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
-       "    display: block;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label {\r\n",
-       "    width: 140px;\r\n",
-       "    color: #555;\r\n",
-       "    font-weight: 500;\r\n",
-       "    padding: 4px 0 2px 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label:before {\r\n",
-       "    display: inline-block;\r\n",
-       "    content: '+';\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    text-align: center;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:disabled + label:before {\r\n",
-       "    color: #777;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label:before {\r\n",
-       "    content: '-';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list {\r\n",
-       "    display: inline-block !important;\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li {\r\n",
-       "    display: inline-block;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:before {\r\n",
-       "    content: '(';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:after {\r\n",
-       "    content: ')';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li:not(:last-child):after {\r\n",
-       "    content: ',';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-has-index {\r\n",
-       "    text-decoration: underline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li {\r\n",
-       "    background-color: #fcfcfc;\r\n",
-       "    overflow: hidden;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li:nth-child(odd) {\r\n",
-       "    background-color: #efefef;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li:hover {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li > span {\r\n",
-       "    display: inline-block;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label {\r\n",
-       "    width: 140px;\r\n",
-       "    padding-left: 0;\r\n",
-       "    font-weight: bold;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataset {\r\n",
-       "    width: 100px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attributevalue {\r\n",
-       "    width: 100px;\r\n",
-       "    text-align: left;\r\n",
-       "    color: #888;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    font-size: 12px;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label:before {\r\n",
-       "    content: ' ';\r\n",
-       "    display: inline-block;\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    padding-left: 2px;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: center;\r\n",
-       "    color: #aaa;\r\n",
-       "    text-decoration: none !important;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:checked + label:before {\r\n",
-       "    color: #ccc;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dims {\r\n",
-       "    width: 280px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list {\r\n",
-       "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
-       "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list li,\r\n",
-       ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
-       "}</style></head>\n",
-       "<div class='h5tb-warp'>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds--7225671000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--7225671000\">\n",
-       "                        /<span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.6.5a0</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\">\n",
-       "<img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />\n",
-       "https://orcid.org/0000-0001-8729-0482\n",
-       "</a></li>\n",
-       "                    </ul>\n",
-       "</li>\n",
-       "</ul>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File(contact='https://orcid.org/0000-0001-8729-0482') as h5:\n",
     "    h5.dump()"
@@ -524,54 +261,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "58bad9ae-3a53-4812-b631-f66313823d4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox import tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b42b60d-b035-44f2-a70f-835febab2310",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attribute.py:76: UserWarning: Ignoring parameter type\n",
-      "  warnings.warn(f'Ignoring parameter {k}', UserWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(\"tbx_convention_standard_names\")\u001b[0m\n",
-       "  File.__init__():\n",
-       "    * \u001b[1mcontact\u001b[0m\n",
-       "    * \u001b[1mtitle\u001b[0m\n",
-       "    * \u001b[1mreferences\u001b[0m\n",
-       "    * \u001b[1mcomment\u001b[0m\n",
-       "    * \u001b[3minstitution\u001b[0m (optional)\n",
-       "  Group.create_dataset():\n",
-       "    * \u001b[1mscale\u001b[0m\n",
-       "    * \u001b[1munits\u001b[0m\n",
-       "    * \u001b[1mlong_name\u001b[0m\n",
-       "    * \u001b[3moffset\u001b[0m (optional)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "local_cv = h5tbx.conventions.Convention.from_yaml('tbx_convention_standard_names.yaml')\n",
+    "convention_filename = tutorial.get_standard_attribute_yaml_filename()\n",
+    "\n",
+    "local_cv = h5tbx.conventions.Convention.from_yaml(convention_filename)\n",
     "local_cv.register()\n",
     "local_cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3269478b-8d74-4b5c-a7e6-bacd984313aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "h5tbx.use(local_cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8de7c963-cb65-4922-a8fb-ed4a8f67c1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.File(contact='https://orcid.org/0000-0001-8729-0482') as h5:\n",
+    "    h5.dump()"
    ]
   },
   {
@@ -590,24 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a3cc688a-088e-4e3e-9d06-4abb834c8978",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'h5rdmtoolbox.conventions' has no attribute 'from_zenodo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cv \u001b[38;5;241m=\u001b[39m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_zenodo\u001b[49m(doi\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123123\u001b[39m)\n\u001b[0;32m      2\u001b[0m h5tbx\u001b[38;5;241m.\u001b[39muse(cv)  \u001b[38;5;66;03m# enable the downloaded convention\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'h5rdmtoolbox.conventions' has no attribute 'from_zenodo'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo(doi=123123)\n",
+    "cv = h5tbx.conventions.from_zenodo(doi=8158764)\n",
     "h5tbx.use(cv)  # enable the downloaded convention"
    ]
   },
@@ -866,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
