small fixes and improved test coverage

--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -15,9 +15,21 @@
    "execution_count": 1,
    "id": "f0ec5083-bfc0-46b9-9627-299cbd842838",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox.conventions.core.use at 0x2295e6d5120>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "h5tbx.use(None)"
    ]
   },
   {
@@ -38,15 +50,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r+\n",
       "tmp0.hdf\n"
      ]
     }
    ],
    "source": [
+    "# init file object with a temporary file:\n",
     "h5 = h5tbx.File()\n",
-    "print(h5.mode)\n",
+    "\n",
+    "# create a dataset\n",
+    "h5.create_dataset('velocity', data=1.3)\n",
+    "\n",
+    "# close the file object\n",
     "h5.close()\n",
+    "\n",
+    "# print the filename\n",
     "print(h5.hdf_filename.name)"
    ]
   },
@@ -55,7 +73,7 @@
    "id": "36e23915-bc58-406f-85aa-7c77cae44937",
    "metadata": {},
    "source": [
-    "Note, that instead of using `filename`, `hdf_filename` is used. It is provided as an additional property. By using the `pathlib.Path` object some useful operations are possible. Also this property is available even if the file is closed."
+    "Note, that the `h5rdmtoolbox` introduces `hdf_filename` to the `File`-object. This allows you to access the filename even if the file has been closed already. This is not possible with `h5py`:"
    ]
   },
   {
@@ -74,8 +92,6 @@
     }
    ],
    "source": [
-    "h5 = h5tbx.File(h5.hdf_filename)\n",
-    "h5.close()\n",
     "try:\n",
     "    print(h5.filename)\n",
     "except ValueError as e:\n",
@@ -95,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "34b7e026-3f38-494c-bd86-17c786c3ecbb",
    "metadata": {
     "tags": []
@@ -132,21 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58c032e2-f964-4d2b-bdfd-6666a66948a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "h5.hdf_filename.unlink()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3e225db-affd-49f9-a1f7-3d9e420cb528",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -165,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
