--- a/docs/conventions/tbx.ipynb
+++ b/docs/conventions/tbx.ipynb
@@ -63,36 +63,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(\"tbx\")\u001b[0m\n",
-       "  File.__init__():\n",
-       "    * \u001b[3mtitle\u001b[0m (optional)\n",
-       "    * \u001b[3minstitution\u001b[0m (optional)\n",
-       "    * \u001b[3mreferences\u001b[0m (optional)\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (optional)\n",
-       "    * \u001b[3mcomment\u001b[0m (optional)\n",
-       "    * \u001b[3mcontact\u001b[0m (optional)\n",
-       "    * \u001b[3msource\u001b[0m (optional)\n",
-       "  Group.create_dataset():\n",
-       "    * \u001b[1munits\u001b[0m\n",
-       "    * \u001b[1mstandard_name\u001b[0m\n",
-       "    * \u001b[1mlong_name\u001b[0m\n",
-       "    * \u001b[3mscale\u001b[0m (optional)\n",
-       "    * \u001b[3moffset\u001b[0m (optional)\n",
-       "    * \u001b[3mcomment\u001b[0m (optional)\n",
-       "    * \u001b[3mcontact\u001b[0m (optional)\n",
-       "    * \u001b[3msource\u001b[0m (optional)\n",
-       "  Group.create_string_dataset():\n",
-       "    * \u001b[3mlong_name\u001b[0m (optional)\n",
-       "  Group.create_group():\n",
-       "    * \u001b[3mcomment\u001b[0m (optional)\n",
-       "    * \u001b[3mcontact\u001b[0m (optional)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'h5rdmtoolbox.conventions' has no attribute 'registered_conventions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mregistered_conventions\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtbx\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'h5rdmtoolbox.conventions' has no attribute 'registered_conventions'"
+     ]
     }
    ],
    "source": [
@@ -171,14 +150,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<StandardName: \"x_wind\" units=m/s, description=\"x wind component\">"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'StandardName' from 'h5rdmtoolbox.conventions' (C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mh5rdmtoolbox\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconventions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardName\n\u001b[0;32m      2\u001b[0m StandardName(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx_wind\u001b[39m\u001b[38;5;124m'\u001b[39m, units\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mm/s\u001b[39m\u001b[38;5;124m'\u001b[39m, description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx wind component\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'StandardName' from 'h5rdmtoolbox.conventions' (C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\__init__.py)"
+     ]
     }
    ],
    "source": [
@@ -1559,7 +1539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
