--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -175,6 +175,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8483fcbf-8449-4bcd-94c2-09d3aeec4f4b",
+   "metadata": {},
+   "source": [
+    "## The effects of a convention\n",
+    "\n",
+    "Now, let's see what the effects of the convention are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f4d74d69-16cb-40b2-9fab-d99f3fbb1127",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h5rdmtoolbox.conventions.core.use at 0x212b10a27f0>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h5tbx.use(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "af06bdf5-7bc1-48ac-b307-2b09644c5c1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Parameters for \"__init__\":\n",
+      "  - name\n",
+      "  - mode\n",
+      "  - layout\n",
+      "  - attrs\n",
+      "  - kwargs\n",
+      "\n",
+      "Parameters for \"create_group\":\n",
+      "  - name\n",
+      "  - overwrite\n",
+      "  - attrs\n",
+      "  - update_attrs\n",
+      "  - track_order\n",
+      "  - kwargs\n",
+      "\n",
+      "Parameters for \"create_dataset\":\n",
+      "  - name\n",
+      "  - shape\n",
+      "  - dtype\n",
+      "  - data\n",
+      "  - overwrite\n",
+      "  - chunks\n",
+      "  - make_scale\n",
+      "  - attach_scales\n",
+      "  - ancillary_datasets\n",
+      "  - attrs\n",
+      "  - kwargs\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "\n",
+    "methods = (h5tbx.File.__init__, h5tbx.Group.create_group, h5tbx.Group.create_dataset)\n",
+    "\n",
+    "for method in methods:\n",
+    "    print(f'\\nParameters for \"{method.__name__}\":')\n",
+    "    for param in inspect.signature(method).parameters.values():\n",
+    "        if not param.name == 'self':\n",
+    "            if param.name in ('contact', 'comment'):\n",
+    "                print(f'  - {h5tbx._repr.make_bold(param.name)}')\n",
+    "            else:\n",
+    "                print(f'  - {param.name}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f1c62c28-40b5-4e52-b4a6-d3c85bcbef04",
